small edits in E2, I2

--- a/SnowmassStyle/Computing/E2-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E2-executiveSummary.tex
@@ -36,7 +36,7 @@ storage is keeping the storage cost, and the  cost of the computing to analyze
 the stored data, at a tolerable level.
 
 Looking forward, the HL-LHC stands out as a significant challenge, while
-science at energy frontier lepton colliders is unlikely to be constrained by
+science at EF lepton colliders is unlikely to be constrained by
 computing issues. 
 At the LHC, however, the expected increases in trigger rate, pileup and detector
 complexity (number of channels) could increase the data rates by a about a
@@ -48,7 +48,7 @@ anticipated that the general design will be an evolution from the current
 models with the computing resources distributed at computing centers around
 the world.
 
-The full report on Computing for the Energy Frontier attempts 
+The full report on Computing for the EF attempts 
 to obtain a prediction of the magnitude of
 changes that should be expected over the coming 10 years, by looking back on 
 the changes between the Tevatron and LHC over the last 10 years. We argue that 
@@ -81,8 +81,8 @@ The growth curves below do not scale
 with total integrated luminosity but indicate that more inputing is
 needed per unit time as trigger rates and event complexity increase.
 It is not reasonable to expect that the techniques currently used to
-analysis data in the energy frontier will continue to scale
-indefinitely.  The energy frontier will need to adopt new techniques
+analysis data in the EF will continue to scale
+indefinitely.  The EF will need to adopt new techniques
 and methods moving forward.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -118,7 +118,7 @@ better use of the computing available.
 
 Moving forward we identify two trends: specialized hardware and computing as a service.
 
-On one side the Energy frontier will need to evolve to use alternative
+On one side the EF will need to evolve to use alternative
 computing architectures and platforms like GPUs and other co-processors, low-
 power "small" cores, etc, as the focus of industry development is moving away
 from the classic server CPU.  Using GPUs introduces significant diversity to
@@ -143,14 +143,14 @@ are likely to come last, and are only likely to come if they can completely
 replace a class of computing resources and perform a function at a reduced
 cost and higher efficiency.
 
-The other trend impacting energy frontier computing is the move to
+The other trend impacting EF computing is the move to
 computing as a service and other "cloud" solutions.  Currently
 commercial offerings, academic resources and opportunistic resources
 are all being offered through cloud provisioning techniques.  While
 commercial solutions are still more expensive than well used dedicated
 resources, there is a steady decrease in the pricing. 
 
-Energy frontier
+EF
 computing should expect a transition to more shared and opportunistic
 resources provided through a variety of interfaces, including cloud interfaces.  
 Effort is needed
@@ -159,10 +159,10 @@ environments and to perform resource provisioning across dedicated,
 specialized, contributed, opportunistic, and purchased resources.
 
 There are considerable concerns regarding the enormous increase 
-in data produced by the next round of energy frontier colliders,  
+in data produced by the next round of EF colliders,  
 to be ingested by the offline computing systems. 
 We observe that while
-the energy frontier processing capacity has increased largely with what would be expected from
+the EF processing capacity has increased largely with what would be expected from
 Moore's law and relatively flat budgets, the storage requirements have
 grown much faster.  The larger number of sites and the need for local
 caches, the increase in trigger rates, and the larger event sizes
@@ -180,7 +180,7 @@ proposing mostly online reconstruction after LHC Long Shutdown 2
 motivations to reconstruct and calibrate online and write only
 constants.
 
-We expect a change of the mentality that a higher trigger rate is always better, and needs to be kept.  As the energy frontier trigger rates go up by order of magnitude, as expected for LHC running and certainly for the HL-LHC, the experiments should expect to be more
+We expect a change of the mentality that a higher trigger rate is always better, and needs to be kept.  As the EF trigger rates go up by order of magnitude, as expected for LHC running and certainly for the HL-LHC, the experiments should expect to be more
 selective in what classes of events to fully reconstruct, and instead develop an approach of on-demand reconstruction, calibration, and
 analysis.
 
@@ -190,7 +190,7 @@ intermediate steps are treated as transient.  More of the analysis steps should 
 chain, only keeping the final output, with the knowledge it can be
 re-derived if required later.
 
-With the expected increased diversity of computing resources, energy frontier
+With the expected increased diversity of computing resources, EF
 computing needs to develop a data management system that can deal with
 all of them.  A system that handles the placement of the data and
 allows the operations team and analysis users to concentrate more on
@@ -200,7 +200,7 @@ needed.
 Industry has put a focus on delivering
 content either through CDNs (Content Delivery Networks) 
 or through peer-to-peer systems.  In the
-next decade computing processing for the energy frontier will evolve
+next decade computing processing for the EF will evolve
 to be less deterministic, with more emphasis on cloud provisioned
 resources, opportunistic computing, local computing, and volunteer
 computing.  The data management system needs to evolve to be much less
