--- a/SnowmassStyle/four-page-summary/four_page_summary.tex
+++ b/SnowmassStyle/four-page-summary/four_page_summary.tex
@@ -1,75 +1,83 @@
 Computing has become a major component of all particle physics experiments
 and in many areas of theoretical particle physics. The Computing Frontier
-study group established subgroups covering user needs and infrastructure.
-The user needs groups covered the experiments at the energy and intensity
-frontiers, the combined needs for cosmic frontier experiments, astrophysics
-and cosmology, and theory subgroups covered accelerator science,
+subgroups covered user needs and infrastructure.
+Experimental user needs subgroups included the three frontiers.
+Theory subgroups covered accelerator science,
 astrophysics and cosmology, lattice field theory, and perturbative QCD.
-Four infrastructure groups examined trends in computing to predict how
-technology will evolve and how it will affect future costs and
+Four infrastructure groups predicted computing trends and
+how they will affect future costs and
 capabilities. These groups focused on distributed computing and facility
-infrastructures; networking; software development, personnel, and training;
-data management and storage. These groups looked to identify critical
-technology needs for particle physics that might require the DOE or NSF to
-fund research in computer science and technology.
+infrastructures; networking; software development, personnel, and training; and
+data management and storage. 
+%%%These groups looked to identify critical
+%%%technology needs for particle physics that might require the DOE or NSF to
+%%%fund research in computer science and technology.
 
-During the period between the Community Planning Meeting at Fermilab and
-the Community Summer Study at the University of Minnesota, the Computing
-Frontier groups were actively engaged with the other Frontiers to learn of
-their plans and estimate their computing needs. The infrastructure groups
-engaged with vendors, computer users, providers and technical experts to
-predict trends in computing, networking, storage, and software development,
-including considerations of costs, capacities and speeds. At the Minnesota
-meeting two days of parallel sessions were devoted to discussions across
-the the subgroups, to finalize subgroup findings, and to identify common
-trends and needs. A Computing Frontier summary talk was prepared and
-presented at the plenary session.
+%%%During the period between the Community Planning Meeting at Fermilab and
+%%%the Community Summer Study at the University of Minnesota, 
+The Computing
+Frontier groups were actively engaged with the other frontiers to learn of
+their plans and estimate their computing needs.  The infrastructure groups
+engaged with vendors, computer users, providers and technical experts. 
+%%%to predict trends in computing, networking, storage, and software development,
+%%%including considerations of costs, capacities and speeds. 
+%%%At the Minnesota
+%%%meeting two days of parallel sessions were devoted to discussions across
+%%%the the subgroups, to finalize subgroup findings, and to identify common
+%%%trends and needs. A Computing Frontier summary talk was prepared and
+%%%presented at the plenary session.
 
 Progress in HEP experiment and theory will require significantly more
-computing, software development, storage and networking, with different
-projects stretching future capabilities in different ways. However, there
-are many commonalities in the needs between the different areas in HEP, and
-in the future more commonality and community planning is advised to move
-ahead in the most efficient manner. This requires careful and continuing
-review of the topics we studied, {\it i.e.}, user needs and capabilities of
-current and future technology. For many years, the particle physics
-community has been a great source of computing innovation and expertise. It
-is essential to leverage those assets through wider sharing of knowledge
-throughout the experimental and theoretical communities. 
-We should be open to bi-directional sharing of expertise with the entire
-%community of data-intensive science."
-scientific community.
+computing, software development, storage, and networking, with different
+projects stretching future capabilities in different ways.  However, there
+are many common needs among different areas in HEP, so more
+community planning is advised to increase efficiency.
+Careful and continuing review of the topics we studied, 
+{\it i.e.}, user needs and capabilities of
+current and future technology is needed.  For many years, the particle physics
+community has been a great source of computing innovation and expertise. 
+We must continue to share our expertise within our field and beyond.
+We should find more opportunties to learn from others as well.
+%%%It is essential to leverage those assets through wider sharing of knowledge
+%%%throughout the experimental and theoretical communities. 
+%%%We should be open to bi-directional sharing of expertise with the entire
+%%%%community of data-intensive science."
+%%%scientific community.
 
-The experimental program relies for the most part on distributed
-high-throughput computing (HTC). Data analysis, simulation and
-reconstruction of individual events are independent of each other, and
-groups of events can be assigned to hardware in different locations.
-Results are combined together when all event groups are done. This
-distributed computing model was pioneered by the energy frontier
-experiments and is relying on a distributed infrastructure of computing
-centers as part of Open Science Grid in the U.S. and extending across the
-globe. The theoretical computing and simulation needs are more commonly
-addressed by high-performance computing (HPC) in which thousands to hundred
-thousands of tightly coupled CPUs are working simultaneously on a single
+The experimental program mainly relies on distributed
+high-throughput computing (HTC). 
+%%%Data analysis, simulation and
+%%%reconstruction of individual events are independent of each other, and
+%%%groups of events can be assigned to hardware in different locations.
+%%%Results are combined together when all event groups are done. This
+The distributed computing model was pioneered by energy frontier
+experiments.  It relies on distributed computing
+centers that are part of the Open Science Grid in the U.S.  
+Additional centers used extend across the globe. 
+The theoretical computing and simulation needs are more commonly
+addressed by high-performance computing (HPC) in which many
+tightly coupled CPUs are working together on a single
 problem. These resources are provided mostly through DOE and NSF
 supercomputing centers.
 
-One issue for those applications that traditionally rely on HTC for their
-data-intensive computing is to what degree they can or should use national
-supercomputer centers which have traditionally been designed for HPC usage.
-Work is proceeding to make these HTC applications run on HPC, and to
-interface HPC centers to the HTC workload and data management
-infrastructures. The question of cost effectiveness is being discussed.
+To what degree can or should data-intensive applications that traditionally 
+rely on HTC use national supercomputer centers which have traditionally 
+been designed for HPC usage?
+Work is proceeding to see how well and how cost-effectively these HTC
+applications can run at HPC centers.
+%%Work is proceeding to make these HTC applications run on HPC, and to
+%%interface HPC centers to the HTC workload and data management
+%%infrastructures. The question of cost-effectiveness is being discussed.
 Also, traditional HPC applications are developing more data-intensive
 science needs, which, however, are currently not a good match to existing
 and next-generation HPC architectures. Computational resources will have to
 address the demands for greatly increasing data rates, and the increased
-needs for data intensive computing tasks like data analytics, for comparing
-large samples of simulations and observational data, etc.
+needs for data intensive computing tasks.
+%%% such as data analytics, for comparing large samples of simulations and observational data.
 
 Another pressing issue facing both HTC and HPC communities is that
-processor speeds are no longer increasing exponentially, as they were for
-at least two decades. Instead, new chip architectures provide multiple
+processor speeds are no longer increasing, as they were for
+at least two decades. Instead, new chips provide multiple
 cores. Thus, we cannot rely on new hardware to run serial codes faster, and
 we must parallelize codes to increase application performance. In addition
 to multi-core chips, there are accelerators such as graphical processing
@@ -77,18 +85,18 @@ units (GPUs) and many-core chips such as the Intel Xeon Phi.
 In the past computing resource needs for energy frontier experiments scaled
 roughly with the rate that processor speeds increased, following Moore's
 law. In the future this requires full use of multiple-core and many-thread 
-architectures. Also
-in the storage area scaling of disk capacity and throughput is of
+architectures. Also,
+scaling of disk capacity and throughput is of
 significant concern, as per-unit capacities no longer increase as rapidly.
 
 These changes in chip technology and high performance system architectures
 require us to develop parallel algorithms and codes, and to train personnel
 to develop, support and maintain them. Different subgroups are at different
 stages in their efforts to port to these new technologies. Lattice QCD, for
-example, started its GPU porting efforts in 2008 and has had code in
-production for some time, particularly for quark inversions; however, there
+example, started its CUDA-based GPU porting efforts in 2008 and has had code in
+production for some time; however, there
 are other parts of the code that are still only running on CPUs.
-Cosmological simulations have exploited GPUs since 2009 and some 
+Cosmological simulations have exploited GPUs since 2009, and some 
 codes have fully incorporated GPUs in their production versions, running 
 at full scale on hybrid supercomputers.
 Accelerator science is also actively porting codes to GPUs. Some of the
@@ -101,26 +109,26 @@ example, only a limited number of people in the field can program GPUs. In
 this and other highly technical areas, developing and keeping expertise in
 new software technologies is a challenge, while well-trained personnel and
 key developers are leaving to take attractive positions in industry.
-Continued training is an important aspect, and there are training materials
-from some of the national supercomputing centers and summer schools are
+Continued training is important.  There are training materials
+from some of the national supercomputing centers.  Summer schools are
 organized by, among others, the Virtual School of Computational Science and
 Engineering (www.vscse.org). We must examine whether these provide the
 right training for our field and whether the delivery mechanisms are
-timely. Using on-line media, workbooks and wikis were suggested to enhance
+timely.  On-line media, workbooks and wikis were suggested to enhance
 training. Another area of common concern is the career path of those who
-become experts in software development and computing. It is useful to help
+become experts in software development and computing. We should help
 young scientists learn computing and software skills that are marketable
 for non-academic jobs, but it is also important that there be career paths
 within particle physics, including tenure-track jobs, for those working at
 the forefront of computation.
 
-For the {\it Energy Frontier} experiments computing limitations already
-cause a limit to the amount of physics data that can be analyzed. The
+For the {\it Energy Frontier}, computing limitations already
+limit the amount of physics data that can be analyzed. The
 planned upgrades to the LHC energy and luminosity are expected to result in
 a ten-fold increase in the number of events and a ten-fold increase in
 event complexity. Effort has begun to increase code efficiency and
 parallelism in reconstruction software and to explore the potential of
-GPUs. It is being considered to save more raw events to tape and only
+accelerators such as GPUs and Xeon Phi. It is being considered to save more raw events to tape and only
 reconstruct them selectively. The LHC produces about 15 PB of raw data per
 year now, but in 2021 the rate may rise to 130 PB. Attention needs to be
 paid to data management and wide-area networking, to assure that network
@@ -134,8 +142,8 @@ than storing them.
 on the scale of a single energy frontier experiment but they are a more
 diverse set than the energy frontier. A survey was conducted and found that
 there is significant commonality in different experiments' needs. Sharing of
-resources across experiments, like in the Open Science Grid, is a first step
-in addressing peak compute resources needs.  Continued coordination of
+resources across experiments, as in the Open Science Grid, is a first step
+in addressing peak computing needs.  Continued coordination of
 software development between these experiments will allow for efficiently
 developed coding infrastructure.  Leveraging the data handling experience and
 expertise of the energy frontier experiments for the diverse intensity
@@ -155,13 +163,13 @@ power. Comparing simulations with observations will play a crucial role in
 interpretation of experiments, and simulations are needed to help design
 new instruments. There are very significant challenges in dealing with new
 computers architectures and very large data sets, as described above.
-Growing archival storage, visualization of simulations and allowing public
+Growing archival storage, visualization of simulations, and allowing public
 access to data are also issues that need attention.
 
 {\it Accelerator Science} is called on to simulate new accelerator designs
 and to provide near-real-time simulations feedback for accelerator
 operation. 
-Research into new algorithms and designs has potential to bring new ideas and
+Research into new algorithms and designs has the potential to bring new ideas and
 capabilities to the field.
 It will be necessary to include additional physics in codes and
 to improve algorithms to achieve these goals. Production runs can use from
@@ -183,7 +191,9 @@ for interpretation of the planned experimental measurement.
 {\it Perturbative QCD} is essential for theoretical understanding of
 collider physics rates. Codes were ported to the HPC centers at NERSC and
 OLCF, and also run on the Open Science Grid. They have also been
-benchmarking GPU codes and finding impressive speed up over a single core.
+benchmarking GPU codes and finding impressive speed up with respect to
+ a single core.
+A computer at CERN was used to benchmark the Intel Xeon Phi chip.
 A repository of codes has been established at NERSC and a long term goal is
 to make it easy for experimentalists to use these codes to compute Standard
 Model rates for the processes they need.
@@ -241,8 +251,8 @@ consider a mix to fulfill demands. Programs to fund these resources need to
 continue. Sharing and opportunistic use help address resource needs, from
 all tiers of computing, eventually including commercial providers. There is
 increasing need for data intensive computing in traditionally
-computation-intensive fields, including at HPC centers, for data analytics,
-combining simulations and observational data, etc.
+computation-intensive fields, including at HPC centers.  %%%, for data analytics,
+%%%combining simulations and observational data, etc.
 
 In order to satisfy our increasing computational demands, the field needs
 to make better use of advanced computing architectures. With the need for
@@ -263,9 +273,10 @@ systems will be needed in order to take advantage of new network
 capabilities, ensure efficiency and robustness of the global data
 federations, and to contain the level of effort needed for operations.
 Significant challenges with data management and access remain, and research
-into these areas could continue to bring benefit across the Frontiers.  We
-expect solutions that will be based on content delivery approaches, dynamic
-data placement, and remote data access.
+into these areas could continue to bring benefit across the Frontiers.  
+%%%We
+%%%expect solutions that will be based on content delivery approaches, dynamic
+%%%data placement, and remote data access.
 
 Network reliability is essential for data intensive distributed computing.
 Emerging network capabilities and data access technologies improve our
@@ -277,10 +288,16 @@ centers relevant for data-intensive computing. The computing models should
 treat networks as a resource that needs to be managed and planned for.
 
 Computing will be essential for progress in theory and experiment over the
-next two decades. The field continues to learn how to do more science with
-constrained resources, requiring us to be more flexible and perhaps tolerate
-higher levels of risk. The advances in computer hardware that we have seen
+next two decades. 
+%%%The field continues to learn how to do more science with
+%%%constrained resources, requiring us to be more flexible and perhaps tolerate
+%%%higher levels of risk. 
+The advances in computer hardware that we have seen
 in the past may not continue at the same rate in the future. The issues
-identified in this report require continuing attention. Addressing them
-will increase efficiency, reduce costs, and enable us to meet the
+identified in this report will require continuing attention from both the
+scientists who develop code and determine what resources best meet
+their needs, and from the funding agencies who will review plans, and
+determine what shall be funded.
+Careful attention to the computational challenges in our field
+will increase efficiency and enable us to meet the
 experimental and theoretical goals identified through the Snowmass process.
