--- a/SnowmassStyle/CpF-I2/authorlist.tex
+++ b/SnowmassStyle/CpF-I2/authorlist.tex
@@ -3,7 +3,7 @@
 %\hyphenpenalty 10000
 
 \begin{center}
-{\large Conveners: Kenneth Bloom$^1$,  Sudip Dosanjh$^2$, Richard Gerber$^2$}\\
+{\large Conveners: Kenneth Bloom$^1$,  Richard Gerber$^2$}\\
 \bigskip
 $^1${\it Department of Physics and Astronomy, University of Nebraska-Lincoln}\\
 $^2${\it National Energy Research Scientific Computing Center (NERSC), Lawrence Berkeley National Laboratory}\\
