Many minor modifications to the theory summaries.

--- a/SnowmassStyle/Computing/T3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T3-executiveSummary.tex
@@ -7,7 +7,7 @@
 One of the foremost goals of high-energy physics is to test the Standard Model
 of particle physics and to search for indications of new physics beyond. In
 many cases, interpretation of the experimental measurements requires a
-quantitative of understanding the nonperturbative dynamics of the quarks and
+quantitative understanding of the nonperturbative dynamics of the quarks and
 gluons in the underlying process.  Lattice gauge theory provides the only
 known method for \emph{ab initio} quantum chromodynamics (QCD) calculations
 with controlled uncertainties, by casting the fundamental equations of QCD
@@ -19,9 +19,9 @@ They provide accurate results for many of the hadronic matrix elements needed
 to realize the potential of present experiments probing the physics of
 flavor. The methodology has been validated by comparison with a broad array of
 measured quantities, several of which had not been well measured by experiment
-by the time of the availibility of results of the first precise lattice
-calculations.  In the coming decades, lattice-QCD has the welcome opportunity
-to play an expanded role in the search for new physics at both the energy and
+at the time of the first precise lattice
+calculations.  In the coming decades, lattice QCD will
+play an expanded role in the search for new physics at both the energy and
 intensity frontiers.
 
 In the U.S., the efforts of the lattice gauge theory community have been
