--- a/SnowmassStyle/Computing/T4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T4-executiveSummary.tex
@@ -1,4 +1,4 @@
- 
+
 \section{Computing for Perturbative QCD}
 \label{chap:PQCD}
 
@@ -8,8 +8,8 @@ calculations in a standardized computing environment made available
 by DOE at the National Energy Research Scientific Computing Center
 (NERSC)~\cite{NERSC}.  Resource requirements were determined for the
 calculation of important background and signal reactions at the
-LHC, including higher order QCD and EW effects. Prototypical results 
-are listed in Tab.~\ref{tab:summary} and have been summarized in a 
+LHC, including higher order QCD and electroweak (EW) effects. Prototypical results 
+are listed in Table~\ref{tab:summary} and have been summarized in a 
 white paper~\cite{HPCWP}.
 
 Different High Performance Computing (HPC) environments were tested
@@ -24,10 +24,11 @@ available to the code authors. Access to these facilities will also
 allow prototyping the next generation of parallel computer programs
 for QCD phenomenology and precision calculations.
 
-The computation of NLO corrections in perturbative QCD has been automatized 
-entirely. Resource requirements for NLO calculations determined during 
+The computation of next-to-leading order (NLO) corrections in 
+perturbative QCD has been entirely
+automated. Resource requirements for NLO calculations determined during 
 this workshop can thus be seen as a baseline that enables phenomenology 
-during the LHC era. NNLO calculations are still performed 
+during the LHC era. Next-to-next-to-leading order (NNLO) calculations are still performed 
 on a case-by-case basis, and their computing needs can only be 
 projected with a large uncertainty. It seems clear, however, that cutting edge 
 calculations will require access to leadership class computing facilities.
