--- a/SnowmassStyle/Computing/T1-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T1-executiveSummary.tex
@@ -2,41 +2,41 @@
  
 \section{Computing for Accelerator Science}
 
-Particle accelerators are critical to scientific discovery both nationally and worldwide. The development and optimization of accelerators are essential for advancing our understanding of the fundamental properties of matter, energy, space and time. Modeling of accelerator components and simulation of beam dynamics are necessary for understanding and optimizing the performance of existing accelerators, for optimizing the design and cost effectiveness of future accelerators, and for discovering and developing new acceleration techniques and technologies.
+Particle accelerators are critical to scientific discovery both nationally and worldwide. The development and optimization of accelerators are essential for advancing our understanding of the fundamental properties of matter, energy, space, and time. Modeling of accelerator components and simulation of beam dynamics are necessary for understanding and optimizing the performance of existing accelerators, for optimizing the design and cost effectiveness of future accelerators, and for discovering and developing new acceleration techniques and technologies.
 
-The requirements for high-fidelity computer simulations of accelerator systems and accelerator components are driven by the need to develop and optimize new accelerator concepts and design machines based on these concepts, and maximize the performance of accelerators based on existing concepts and technologies.  For  Energy Frontier applications this means supporting the development of new techniques that will increase the accelerating gradients so future machines are more compact and less costly. The options considered in our study include acceleration in plasma structures, using either laser or beam driven wakefields, dielectric structures driven by lasers or RF (GHz), the development of new lepton collider designs such as muon colliders and two-beam acceleration, and optimization of existing technologies such as superconducting rf cavities. For  Intensity Frontier, simulations are essential in developing and optimizing integrated designs in order to minimize beam losses due to instabilities caused either by beam self-interactions or by interactions of the beam with the accelerator structures or other media present in the beam pipe.  This  includes both designing mitigation techniques and determining optimal operational parameters.  Hadron colliders at the Energy Frontier have similar requirements, although self-interactions are not important and beam-beam interactions (which are similarly computationally intensive) have to be included.  
+The requirements for high-fidelity computer simulations of accelerator systems and accelerator components are driven by the need to develop and optimize new accelerator concepts and design machines based on these concepts, and maximize the performance of accelerators based on existing concepts and technologies.  For  Energy Frontier applications this means supporting the development of new techniques that will increase the accelerating gradients so future machines are more compact and less costly. The options considered in our study include acceleration in plasma structures, using either laser or beam driven wakefields, dielectric structures driven by lasers or RF (GHz), the development of new lepton collider designs such as muon colliders and two-beam acceleration, and optimization of existing technologies such as superconducting RF cavities. For  Intensity Frontier, simulations are essential in developing and optimizing integrated designs in order to minimize beam losses due to instabilities caused either by beam self-interactions or by interactions of the beam with the accelerator structures or other media present in the beam pipe.  This  includes both designing mitigation techniques and determining optimal operational parameters.  Hadron colliders at the Energy Frontier have similar requirements, although self-interactions are not important, while beam-beam interactions (which are similarly computationally intensive) have to be included.  
 
 Simulations of accelerators for both the Energy and the Intensity frontier are computationally demanding because they often involve a wide range of time and length scales and a wide spectrum of interoperating physics components. For example, high intensity proton drivers of the order of $10^3$ m, operating at an EM wavelength of $10^2$--$10$ m with components of the order of $10$--$1$ m must resolve particle bunches of the order of $10^{-3}$ m. Similarly, laser-plasma accelerators (LPA) of the order of $1$ m in length must resolve laser wavelength and electron bunch size of the order of $1$ $\mu$m.
 
-Most of software for accelerator science are already  highly parallelized and scalable to $> 10$k cores on High Performance Computer. They use a wide variety of numerical models, such as electrostatic (multigrid, AMR multigrid, spectral), electromagnetic (finite difference, finite element direct and hybrid, extended stencil finite-difference, AMR finite-difference), quasi-static (spectral), and  matrix solvers, Particle in Cell, meshin and other libraries, and a variety of analysis tools. In addition, there are ongoing R\&D efforts to port these numerical models on new architectures such as GPU based machines.
+Most software for accelerator science is already  highly parallelized and scalable to $> 10$K cores on high performance computers. A wide variety of physical situations and numerical methods are used. These include  electrostatic (multigrid, AMR multigrid, spectral), electromagnetic (finite difference, finite element direct and hybrid, extended stencil finite-difference, AMR finite-difference), quasi-static (spectral).  In addition,  libraries for matrix solvers, particle in cell, and meshing are used, as well as a variety of analysis tools. There are ongoing R\&D efforts to port these numerical models to new architectures such as GPUs.
 
-The computational and computing needs for supporting Accelerator
-Science are dominated by the need to optimally utilize
-High-Performance-Computing (HPC) and the availability of tools
-and resources that makes this utilization possible.  Here HPC is
+The computational needs for supporting accelerator
+science are dominated by the need to optimally utilize
+high performance computing (HPC) and the availability of tools
+and resources that make this utilization possible.  Here HPC is
 defined in the conventional way, where parallelism and fast
-interconnect is essential to the computation, since each
+interconnect are essential to the computation, since each
 simulation step requires communication between thousands to
 millions of processors. The projected computing  needs for all
-the major modeling applications from both energy and intensity
+the major modeling applications from both the energy and intensity
 frontiers is shown in Table~\ref{tab:CompNeeds}, where the units
 are based on the current performance of our codes on Hopper at
 NERSC. Note that in this report we do not detail data storage and
 networking needs (with one exception), because our area will not
 drive the overall requirements, which are dominated by HEP
-experiment needs.  We will leverage from the solutions
-implemented to support these programs.
+experiment needs.  We will leverage the solutions
+implemented to support experiments.
 
 A common theme from the requirements communicated both by our
 user community (accelerator scientists operating machines or
 performing R\&D at test facilities) and computational accelerator
 physicists, is the need for programmatic coordination and support
 of code development and computing R\&D to create a sustainable
-computational accelerator science program.  Porting of our
+computational accelerator science program.  Porting our
 algorithms and workflows to new computing architectures
 (light-weight CPU plus accelerator) and the R\&D necessary to
 create and evaluate new algorithms is an important component of
-such coordinated program (including close interactions with HPC
+such a coordinated program (including close interactions with HPC
 centers to utilize test-beds of new architectures). An example of
 such programmatic support today is the SciDAC program, although
 it is desirable that in the future there is more focus on the
@@ -49,12 +49,12 @@ development of generic workflow tools that perform in an HPC
 environment as well as local workstations and clusters is very important, as is the development and
 integration to our toolkit of parameter optimization libraries,
 that will be available across all HPC platforms.  The development
-of such environment will enable experimentalists and machine
+of such an environment will enable experimentalists and machine
 operators to take advantage of these computational capabilities
 and will be essential in training students and young researchers
 to help develop the new accelerator concepts and technologies
 that will move the field of particle accelerators forward.   In
-addition, it is essential for such program to support and
+addition, it is essential for such a program to support and
 coordinate physics model validation and verification, ultimately
 with comparisons to experimental data of well controlled
 experiments in test facilities or operating accelerators.
@@ -83,9 +83,9 @@ diagnostics.  Such analysis tools have to be HPC capable, to
 allow for the fast turnaround necessary for control room
 feedback, and they will also require development of new models
 and algorithms.  Finally, this is probably the only application
-in accelerator modeling that data transfer speed and data
-availability, storage, and cataloging has similar requirements to
-those of a HEP experiment DAQ system.
+in accelerator modeling for which data transfer speed and data
+availability, storage, and cataloging have similar requirements to
+those of an HEP experiment DAQ system.
 
 
 
@@ -93,8 +93,8 @@ those of a HEP experiment DAQ system.
 requirements for the development of new or more efficient physics
 or computational models, but all of them require integrated
 multi-scale, multi-physics modeling.  
-Although the physics models implemented in today's simulation tools utilize the  sophisticated HPC infrastructure, because of the size of the computation, often ``single physics'' or ``few physics" models are included in a run. The different physics effects are studied separately, as if they were independent.  This is not the case in general, affecting our ability to find optimal design and operational parameters.  More efforts are needed to integrate multiple physics for more accurate simulations, with the ability to utilize massive computing resources beyond the capabilities of today. 
-   In the energy frontier, where single components of the accelerator are simulated separately, end-to-end simulations and integration between components is needed.  For example, plasma based accelerators simulations must be advanced from modeling current experiments at the 10 GeV and 0.1 micron emittance level to future collider concepts involving 100s of stages at the 0.01 micron emittance level, which also requires integration of additional physical models such as scattering and radiation. For high-intensity circular proton machines, a large number of macro-particles ($\sim 10^9$) must be used in the simulations in order to accurately represent \% level losses. In addition, detailed models of important components relevant to all frontier applications are missing from our simulation toolkits because of prohibitive computational cost and complexity (for example target modeling, including Gas dynamics, MHD, and heat loading/dissipation must be integrated to our toolkit). 
+Although the physics models implemented in today's simulation tools utilize sophisticated HPC infrastructure, because of the size of the computation, often ``single physics'' or ``few physics" models are included in a run. Different physical effects are studied separately, as if they were independent.  This is not the case, in general, affecting our ability to find optimal design and operational parameters.  More efforts are needed to integrate multiple physics for more accurate simulations, with the ability to utilize massive computing resources beyond the capabilities of today. 
+   In the energy frontier, where single components of the accelerator are simulated separately, end-to-end simulations and integration between components is needed.  For example, plasma based accelerator simulations must be advanced from modeling current experiments at the 10 GeV and 0.1 micron emittance level to future collider concepts involving hundreds of stages at the 0.01 micron emittance level, which also requires integration of additional physical models such as scattering and radiation. For high-intensity circular proton machines, a large number of macro-particles ($\sim 10^9$) must be used in the simulations in order to accurately represent per cent level losses. In addition, detailed models of important components relevant to all frontier applications are missing from our simulation toolkits because of prohibitive computational cost and complexity (for exampled, target modeling, including Gas dynamics, MHD, and heat loading/dissipation must be integrated into our toolkit). 
 Deployment of such capabilities
 will enable end-to-end simulations to validate designs based on
 new concepts and end-to-end operational parameter optimization of
@@ -119,7 +119,7 @@ end-to-end  optimization runs, while developing mitigation
 techniques possibly requires the implementation of new physics in the HPC
 environment, to model the new components (for example, electron
 lenses for space-charge compensation). Energy Frontier
-application based on protons have similar modeling needs for loss
+applications based on protons have similar modeling needs for loss
 control and mitigation, although in this case impedance effects
 dominate (and possibly beam-beam interactions in a collider) as
 self-interactions are not important.
@@ -128,7 +128,7 @@ Energy Frontier accelerator needs are dominated by the need to
 develop end-to-end simulations to characterize and optimize beam
 stability and emittance and transport efficiency.  New
 accelerator concepts have many specific new physics model
-capability needs, for example development of electromagnetic
+capability needs, for example, development of electromagnetic
 plasma and beam methods capable of resolving 0.1 km-scale
 propagation of 10 nm scale emittance bunches and laser drivers,
 and the corresponding bunch conditioning and focusing, but there
