Changed ILC Higgs observations to precision Higgs measurements at future colliders

--- a/SnowmassStyle/four-page-summary/four_page_summary.tex
+++ b/SnowmassStyle/four-page-summary/four_page_summary.tex
@@ -184,7 +184,7 @@ This program provides essential input for interpretation of a number of
 experiments, and increased precision will be required in the future. For
 example, the $b$ quark mass and the strong coupling $\alpha_s$ will need to
 be known at the 0.25\% level, a factor of two better than now, to compare
-upcoming ILC Higgs observations with Standard Model predictions. Advances
+Higgs observations at future colliders with Standard Model predictions. Advances
 in the calculation of hadronic contributions to muon $g-2$ will be needed
 for interpretation of the planned experimental measurement.
 
