some small edits in I4

--- a/SnowmassStyle/Computing/I5-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I5-executiveSummary.tex
@@ -1,6 +1,7 @@
 \section{Storage and Data Management}
 
-The largest HEP experiments have developed, and are  improving
+
+The largest HEP experiments have developed and are improving
 functional distributed data and workflow management systems meeting
 their needs. These systems are expensive to develop and operate and
 are thus  rarely appropriate for smaller experiments.
@@ -40,7 +41,7 @@ virtual data as a way to accommodate scenarios where storage for
 derived and  simulated data becomes relatively very costly.
 
 All experiments across all frontiers
-need  infrastructure that will allow scientists to store, catalogue,
+need  infrastructure that will allow scientists to store, catalog,
 access, and  reprocess datasets years after the original physics
 results are produced.  The inherent similarity of the requirements
 across experiments and disciplines  call for a coordinated investment
@@ -49,3 +50,4 @@ practices in knowledge preservation.  Solutions  should be developed
 that meet the needs of the particle and astrophysics  communities
 before widespread release of data to the public can be expected  or
 mandated.
+
