--- a/SnowmassStyle/Computing/I4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I4-executiveSummary.tex
@@ -31,13 +31,13 @@ Some specific recommendations we feel will help achieve these goals are:
         \item Encourage the creation of new toolkits from existing successful common software (generators, tracking, ...)
         \item  Allow flexible funding of software experts to facilitate transfer of software and sharing of technical expertise between projects
         \item Facilitate code sharing through open-source licensing and use of publicly-readable repositories.
-        \item Consolidate and standardize software management tools to minimize cross-experimental ``friction''
+        \item Consolidate and standardize software management tools to minimize cross-experimental "friction"
     \end{itemize}
 
     \item Software Development for new Hardware Architectures
     \begin{itemize}
         \item Significant investments in software are needed to adapt to the evolution of computing processors, both as basic R\&D into appropriate
-techniques and as reengineering ``upgrades''
+techniques and as re-engineering "upgrades"
         \item New software should be designed, and existing software rengineered, to expose parallelism at multiple levels
         \item Develop flexible software architectures that can exploit efficiently a variety of possible future hardware options
     \end{itemize}    
@@ -57,7 +57,7 @@ techniques and as reengineering ``upgrades''
         \item Involve computing professionals in the training of scientific domain experts
         \item Use online media to share training
         \item Use workbooks and wikis as evolving, interactive software documentation
-        \item Provide young scientitsts with opportunities to learn computing and software skills that are marketable for non-academic jobs
+        \item Provide young scientists with opportunities to learn computing and software skills that are marketable for non-academic jobs
     \end{itemize}
 
 \end{itemize}
