Updated open paragraph to emphasize conclusions, not organization. This change was requested by reader's committee.

--- a/SnowmassStyle/four-page-summary/four_page_summary.tex
+++ b/SnowmassStyle/four-page-summary/four_page_summary.tex
@@ -1,32 +1,5 @@
 Computing has become a major component of all particle physics experiments
-and in many areas of theoretical particle physics. The Computing Frontier
-subgroups covered user needs and infrastructure.
-Experimental user needs subgroups included the three frontiers.
-Theory subgroups covered accelerator science,
-astrophysics and cosmology, lattice field theory, and perturbative QCD.
-Four infrastructure groups predicted computing trends and
-how they will affect future costs and
-capabilities. These groups focused on distributed computing and facility
-infrastructures; networking; software development, personnel, and training; and
-data management and storage. 
-%%%These groups looked to identify critical
-%%%technology needs for particle physics that might require the DOE or NSF to
-%%%fund research in computer science and technology.
-
-%%%During the period between the Community Planning Meeting at Fermilab and
-%%%the Community Summer Study at the University of Minnesota, 
-The Computing
-Frontier groups were actively engaged with the other frontiers to learn of
-their plans and estimate their computing needs.  The infrastructure groups
-engaged with vendors, computer users, providers and technical experts. 
-%%%to predict trends in computing, networking, storage, and software development,
-%%%including considerations of costs, capacities and speeds. 
-%%%At the Minnesota
-%%%meeting two days of parallel sessions were devoted to discussions across
-%%%the the subgroups, to finalize subgroup findings, and to identify common
-%%%trends and needs. A Computing Frontier summary talk was prepared and
-%%%presented at the plenary session.
-
+and in many areas of theoretical particle physics. 
 Progress in HEP experiment and theory will require significantly more
 computing, software development, storage, and networking, with different
 projects stretching future capabilities in different ways.  However, there
@@ -43,6 +16,33 @@ We should find more opportunties to learn from others as well.
 %%%We should be open to bi-directional sharing of expertise with the entire
 %%%%community of data-intensive science."
 %%%scientific community.
+
+The Computing Frontier
+subgroups covered user needs and infrastructure.
+Experimental user needs subgroups included the three frontiers.
+Theory subgroups covered accelerator science,
+astrophysics and cosmology, lattice field theory, and perturbative QCD.
+Four infrastructure groups predicted computing trends and
+how they will affect future costs and
+capabilities. These groups focused on distributed computing and facility
+infrastructures; networking; software development, personnel, and training; and
+data management and storage. 
+%%%These groups looked to identify critical
+%%%technology needs for particle physics that might require the DOE or NSF to
+%%%fund research in computer science and technology.
+%%%During the period between the Community Planning Meeting at Fermilab and
+%%%the Community Summer Study at the University of Minnesota, 
+The Computing
+Frontier groups were actively engaged with the other frontiers to learn of
+their plans and estimate their computing needs.  The infrastructure groups
+engaged with vendors, computer users, providers and technical experts. 
+%%%to predict trends in computing, networking, storage, and software development,
+%%%including considerations of costs, capacities and speeds. 
+%%%At the Minnesota
+%%%meeting two days of parallel sessions were devoted to discussions across
+%%%the the subgroups, to finalize subgroup findings, and to identify common
+%%%trends and needs. A Computing Frontier summary talk was prepared and
+%%%presented at the plenary session.
 
 The experimental program mainly relies on distributed
 high-throughput computing (HTC). 
@@ -184,7 +184,8 @@ This program provides essential input for interpretation of a number of
 experiments, and increased precision will be required in the future. For
 example, the $b$ quark mass and the strong coupling $\alpha_s$ will need to
 be known at the 0.25\% level, a factor of two better than now, to compare
-Higgs observations at future colliders with Standard Model predictions. Advances
+precision Higgs measurements at future colliders with 
+Standard Model predictions.  Advances
 in the calculation of hadronic contributions to muon $g-2$ will be needed
 for interpretation of the planned experimental measurement.
 
