Put in Steve's new version of the 4-pager into exec summary

--- a/SnowmassStyle/four-page-summary/four_page_summary.tex
+++ b/SnowmassStyle/four-page-summary/four_page_summary.tex
@@ -1,32 +1,5 @@
 Computing has become a major component of all particle physics experiments
-and in many areas of theoretical particle physics. The Computing Frontier
-subgroups covered user needs and infrastructure.
-Experimental user needs subgroups included the three frontiers.
-Theory subgroups covered accelerator science,
-astrophysics and cosmology, lattice field theory, and perturbative QCD.
-Four infrastructure groups predicted computing trends and
-how they will affect future costs and
-capabilities. These groups focused on distributed computing and facility
-infrastructures; networking; software development, personnel, and training; and
-data management and storage. 
-%%%These groups looked to identify critical
-%%%technology needs for particle physics that might require the DOE or NSF to
-%%%fund research in computer science and technology.
-
-%%%During the period between the Community Planning Meeting at Fermilab and
-%%%the Community Summer Study at the University of Minnesota, 
-The Computing
-Frontier groups were actively engaged with the other frontiers to learn of
-their plans and estimate their computing needs.  The infrastructure groups
-engaged with vendors, computer users, providers and technical experts. 
-%%%to predict trends in computing, networking, storage, and software development,
-%%%including considerations of costs, capacities and speeds. 
-%%%At the Minnesota
-%%%meeting two days of parallel sessions were devoted to discussions across
-%%%the the subgroups, to finalize subgroup findings, and to identify common
-%%%trends and needs. A Computing Frontier summary talk was prepared and
-%%%presented at the plenary session.
-
+and in many areas of theoretical particle physics. 
 Progress in HEP experiment and theory will require significantly more
 computing, software development, storage, and networking, with different
 projects stretching future capabilities in different ways.  However, there
@@ -38,18 +11,24 @@ current and future technology is needed.  For many years, the particle physics
 community has been a great source of computing innovation and expertise. 
 We must continue to share our expertise within our field and beyond.
 We should find more opportunties to learn from others as well.
-%%%It is essential to leverage those assets through wider sharing of knowledge
-%%%throughout the experimental and theoretical communities. 
-%%%We should be open to bi-directional sharing of expertise with the entire
-%%%%community of data-intensive science."
-%%%scientific community.
+
+The Computing Frontier
+subgroups covered user needs and infrastructure.
+Experimental user needs subgroups included the three frontiers.
+Theory subgroups covered accelerator science,
+astrophysics and cosmology, lattice field theory, and perturbative QCD.
+Four infrastructure groups predicted computing trends and
+how they will affect future costs and
+capabilities. These groups focused on distributed computing and facility
+infrastructures; networking; software development, personnel, and training; and
+data management and storage. 
+The Computing
+Frontier groups were actively engaged with the other frontiers to learn of
+their plans and estimate their computing needs.  The infrastructure groups
+engaged with vendors, computer users, providers and technical experts. 
 
 The experimental program mainly relies on distributed
 high-throughput computing (HTC). 
-%%%Data analysis, simulation and
-%%%reconstruction of individual events are independent of each other, and
-%%%groups of events can be assigned to hardware in different locations.
-%%%Results are combined together when all event groups are done. This
 The distributed computing model was pioneered by energy frontier
 experiments.  It relies on distributed computing
 centers that are part of the Open Science Grid in the U.S.  
@@ -65,15 +44,11 @@ rely on HTC use national supercomputer centers which have traditionally
 been designed for HPC usage?
 Work is proceeding to see how well and how cost-effectively these HTC
 applications can run at HPC centers.
-%%Work is proceeding to make these HTC applications run on HPC, and to
-%%interface HPC centers to the HTC workload and data management
-%%infrastructures. The question of cost-effectiveness is being discussed.
 Also, traditional HPC applications are developing more data-intensive
 science needs, which, however, are currently not a good match to existing
 and next-generation HPC architectures. Computational resources will have to
 address the demands for greatly increasing data rates, and the increased
 needs for data intensive computing tasks.
-%%% such as data analytics, for comparing large samples of simulations and observational data.
 
 Another pressing issue facing both HTC and HPC communities is that
 processor speeds are no longer increasing, as they were for
@@ -128,7 +103,8 @@ planned upgrades to the LHC energy and luminosity are expected to result in
 a ten-fold increase in the number of events and a ten-fold increase in
 event complexity. Effort has begun to increase code efficiency and
 parallelism in reconstruction software and to explore the potential of
-accelerators such as GPUs and Xeon Phi. It is being considered to save more raw events to tape and only
+accelerators such as GPUs and Xeon Phi. It is being considered to save more 
+raw events to tape and only
 reconstruct them selectively. The LHC produces about 15 PB of raw data per
 year now, but in 2021 the rate may rise to 130 PB. Attention needs to be
 paid to data management and wide-area networking, to assure that network
@@ -184,7 +160,8 @@ This program provides essential input for interpretation of a number of
 experiments, and increased precision will be required in the future. For
 example, the $b$ quark mass and the strong coupling $\alpha_s$ will need to
 be known at the 0.25\% level, a factor of two better than now, to compare
-Higgs observations at future colliders with Standard Model predictions. Advances
+precision Higgs measurements at future colliders with 
+Standard Model predictions.  Advances
 in the calculation of hadronic contributions to muon $g-2$ will be needed
 for interpretation of the planned experimental measurement.
 
@@ -251,8 +228,7 @@ consider a mix to fulfill demands. Programs to fund these resources need to
 continue. Sharing and opportunistic use help address resource needs, from
 all tiers of computing, eventually including commercial providers. There is
 increasing need for data intensive computing in traditionally
-computation-intensive fields, including at HPC centers.  %%%, for data analytics,
-%%%combining simulations and observational data, etc.
+computation-intensive fields, including at HPC centers.  
 
 In order to satisfy our increasing computational demands, the field needs
 to make better use of advanced computing architectures. With the need for
@@ -274,9 +250,6 @@ capabilities, ensure efficiency and robustness of the global data
 federations, and to contain the level of effort needed for operations.
 Significant challenges with data management and access remain, and research
 into these areas could continue to bring benefit across the Frontiers.  
-%%%We
-%%%expect solutions that will be based on content delivery approaches, dynamic
-%%%data placement, and remote data access.
 
 Network reliability is essential for data intensive distributed computing.
 Emerging network capabilities and data access technologies improve our
@@ -289,9 +262,6 @@ treat networks as a resource that needs to be managed and planned for.
 
 Computing will be essential for progress in theory and experiment over the
 next two decades. 
-%%%The field continues to learn how to do more science with
-%%%constrained resources, requiring us to be more flexible and perhaps tolerate
-%%%higher levels of risk. 
 The advances in computer hardware that we have seen
 in the past may not continue at the same rate in the future. The issues
 identified in this report will require continuing attention from both the
